--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME="And I Quote"
+APP_NAME="AND I QUOTE"
 APP_ENV=local
-APP_KEY=base64:YOUR_APP_KEY_HERE
+APP_KEY=base64:your-generated-app-key
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,22 +8,10 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-PHP_CLI_SERVER_WORKERS=4
-BCRYPT_ROUNDS=12
-
 LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# ----------------------------------------
-# DATABASE CONFIGURATION
-# ----------------------------------------
-
-# MySQL
+# --- DATABASE (MySQL) ---
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -31,59 +19,25 @@ DB_DATABASE=and_i_quote
 DB_USERNAME=root
 DB_PASSWORD=
 
-# MongoDB (optional — requires jenssegers/mongodb)
-# DB_CONNECTION=mongodb
-# DB_HOST=127.0.0.1
-# DB_PORT=27017
-# DB_DATABASE=and_i_quote
-# DB_USERNAME=
-# DB_PASSWORD=
-
-# ----------------------------------------
-# SESSION & CACHE
-# ----------------------------------------
+# --- SESSION / CACHE ---
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
-
 CACHE_STORE=database
-# CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-# ----------------------------------------
-# EMAIL (Brevo SMTP)
-# ----------------------------------------
+# --- EMAIL (Brevo SMTP) ---
 MAIL_MAILER=smtp
 MAIL_HOST=smtp-relay.brevo.com
 MAIL_PORT=587
-MAIL_USERNAME=your-brevo-login-email@example.com
-MAIL_PASSWORD=your-brevo-v3-api-key
+MAIL_USERNAME=your-brevo-email@example.com
+MAIL_PASSWORD=your-brevo-api-key
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=hello@example.com
 MAIL_FROM_NAME="${APP_NAME}"
 
-# ----------------------------------------
-# AWS (Optional)
-# ----------------------------------------
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# --- BREVO API KEY (for API calls if needed) ---
+BREVO_API_KEY=your-brevo-api-key
+BREVO_SENDER_EMAIL=hello@example.com
+BREVO_SENDER_NAME="AND I QUOTE"
 
-# ----------------------------------------
-# FRONTEND CONFIG
-# ----------------------------------------
+# --- FRONTEND ---
 VITE_APP_NAME="${APP_NAME}"
