updates and fixes based on the initial feedback .

--- a/.env.example
+++ b/.env.example
@@ -24,20 +24,11 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 CACHE_STORE=database
 
-# --- EMAIL (Brevo SMTP) ---
-MAIL_MAILER=smtp
-MAIL_HOST=smtp-relay.brevo.com
-MAIL_PORT=587
-MAIL_USERNAME=your-brevo-email@example.com
-MAIL_PASSWORD=your-brevo-api-key
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=hello@example.com
-MAIL_FROM_NAME="${APP_NAME}"
 
-# --- BREVO API KEY (for API calls if needed) ---
-BREVO_API_KEY=your-brevo-api-key
-BREVO_SENDER_EMAIL=hello@example.com
-BREVO_SENDER_NAME="AND I QUOTE"
+# --- BREVO API (For API calls instead of SMTP) ---
+BREVO_API_KEY=your-brevo-api-key                  # API key from Brevo dashboard
+BREVO_SENDER_EMAIL=hello@example.com              # Sender email for API calls
+BREVO_SENDER_NAME="AND I QUOTE"                   # Sender name for API calls
 
 # --- FRONTEND ---
 VITE_APP_NAME="${APP_NAME}"
